# transient-package

./: README.md  pyproject.toml
.github/workflows/: publish.yml
transient_package/: __init__.py  transient.py
transient_package/scripts/: transient_package.py
