[build-system]
build-backend = "setuptools.build_meta"

requires = [
  "setuptools",
]


[project]
description = "CLI utility for creating transient Python packages."
name = "transient-package"
version = "1.0.1"
readme = "README.md"
requires-python = ">=3.8"

authors = [
  { name = "sasha0552", email = "admin@sasha0552.org" },
]

classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: System :: Installation/Setup",
]

dependencies = [
  "click==8.1.7",
  "packaging==24.1",
  "wheel==0.44.0",
]

license = { text = "MIT" }


[project.scripts]
transient-package = "transient_package.scripts.transient_package:main"


[project.urls]
Homepage = "https://github.com/sasha0552/transient-package"
